add dropdown menu, upadate navbar

--- a/exchange.html
+++ b/exchange.html
@@ -39,36 +39,36 @@
                 <img class="invert" src="assets/logo.svg">
             </a>
             <div class="menu-nav-wrapper">
-                <a href="index.html">
+                <a class="btn-hover" href="index.html">
                     Home
                 </a>
-                <a href="">
+                <a class="btn-hover" href="exchange.html">
                     Exchange
                 </a>
-                <a href="market.html">
+                <a class="btn-hover" href="market.html">
                     Markets
                 </a>
-                <a href="learn.html">
+                <a class="btn-hover" href="learn.html">
                     Learn
                 </a>
-                <a href="">
+                <a class="btn-hover" href="">
                     Forum
                 </a>
-                <a href="">
+                <a class="btn-hover" href="">
                     Blog
                 </a>
-                <a href="contact.html">
+                <a class="btn-hover" href="contact.html">
                     Support
                 </a>
             </div>
             <div class="right-nav-wrapper">
-                <div>
+                <div class="btn-hover">
                     Download
                 </div>
-                <div>
+                <div onclick="toggleDropdown(this)" class="btn-dropdown">
                     English
                 </div>
-                <div>
+                <div onclick="toggleDropdown(this)" class="btn-dropdown">
                     USD
                 </div>
                 <div>
@@ -83,6 +83,64 @@
                 
             </div>
         </div>
+        <div class="dropdown-wrapper">
+            <div class="container">
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+            </div>
+        </div>
         <div id="wrapper-mobile-menu">
             <div>
                 <button onclick="togglePanel(this)">
@@ -95,7 +153,7 @@
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                 </div>
-                <a class="plain" href="">
+                <a class="plain" href="exchange.html">
                     Exchange
                 </a>
                 <a class="plain" href="market.html">
@@ -140,19 +198,19 @@
             </h1>
             <div class="wrapper-feature">
                 <div class="feature-item">
-                    <img src="assets/itm_exchange_1.png"/>
+                    <img class="invert" src="assets/itm_exchange_1.png"/>
                     <p>
                         Buy crypto fast and easy with your credit card
                     </p>
                 </div>
                 <div class="feature-item">
-                    <img src="assets/itm_exchange_2.png"/>
+                    <img class="invert" src="assets/itm_exchange_2.png"/>
                     <p>
                         Get listed on Bytedex within 3 days
                     </p>
                 </div>
                 <div class="feature-item">
-                    <img src="assets/itm_exchange_3.png"/>
+                    <img class="invert" src="assets/itm_exchange_3.png"/>
                     <p>
                         Startup Launch Program on Bytedex
                     </p>
