--- a/index.html
+++ b/index.html
@@ -40,36 +40,36 @@
                 <img class="invert" src="assets/logo.svg">
             </a>
             <div class="menu-nav-wrapper">
-                <a href="index.html">
+                <a class="btn-hover" href="index.html">
                     Home
                 </a>
-                <a href="">
+                <a class="btn-hover" href="exchange.html">
                     Exchange
                 </a>
-                <a href="market.html">
+                <a class="btn-hover" href="market.html">
                     Markets
                 </a>
-                <a href="learn.html">
+                <a class="btn-hover" href="learn.html">
                     Learn
                 </a>
-                <a href="">
+                <a class="btn-hover" href="">
                     Forum
                 </a>
-                <a href="">
+                <a class="btn-hover" href="">
                     Blog
                 </a>
-                <a href="contact.html">
+                <a class="btn-hover" href="contact.html">
                     Support
                 </a>
             </div>
             <div class="right-nav-wrapper">
-                <div>
+                <div class="btn-hover">
                     Download
                 </div>
-                <div>
+                <div onclick="toggleDropdown(this)" class="btn-dropdown">
                     English
                 </div>
-                <div>
+                <div onclick="toggleDropdown(this)" class="btn-dropdown">
                     USD
                 </div>
                 <div>
@@ -84,6 +84,64 @@
                 
             </div>
         </div>
+        <div class="dropdown-wrapper">
+            <div class="container">
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+                <a class="dropdown-item" href="">
+                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <div>
+                        <span>lorem Ipsum</span>
+                        <span>
+                            Lorem ipsum dolor sit.
+                        </span>
+                    </div>
+                </a>
+            </div>
+        </div>
         <div id="wrapper-mobile-menu">
             <div>
                 <button onclick="togglePanel(this)">
@@ -96,7 +154,7 @@
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                 </div>
-                <a class="plain" href="">
+                <a class="plain" href="exchange.html">
                     Exchange
                 </a>
                 <a class="plain" href="market.html">
