update collapse menu n dropdown, update blur element on landing

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
             <span class="wrapper-float">
                 <!-- <div class="market-blur night"></div> -->
                 <!-- <div class="market-blur day"></div> -->
-                <img id="blur-market" src="assets/floating/blur_market.svg"/>
+                <img class="blur-market night" src="assets/floating/blur_market.svg"/>
+                <img class="blur-market day" src="assets/floating/blur_market_day.svg"/>
             </span>
         </div>
         <div class="container above-grain">
@@ -588,7 +589,8 @@
                 <!-- <div class="top-crypto-blur night"></div> -->
                 <!-- <div class="top-crypto-blur day"></div> -->
                 <!-- <div class="top-crypto-blur day1 day"></div> -->
-                <img id="blur-crypt"  src="assets/floating/blur_crypt.svg"/>
+                <img class="blur-crypt night"  src="assets/floating/blur_crypt.svg"/>
+                <img class="blur-crypt day"  src="assets/floating/blur_crypt_day.svg"/>
                 <img id="b-letter" class="night" src="assets/floating/b_letter.png"/>
                 <img id="b-letter" class="day" src="assets/floating/b_letter_day.png"/>
             </span>
@@ -728,7 +730,8 @@
             <span class="wrapper-float">
                 <!-- <div class="buy-blur night"></div> -->
                 <!-- <div class="buy-blur day"></div> -->
-                <img id="buy-crypt"  src="assets/floating/blur_buy.svg"/>
+                <img class="buy-crypt night"  src="assets/floating/blur_buy.svg"/>
+                <img class="buy-crypt day"  src="assets/floating/blur_market_day.svg"/>
                 <img id="q-letter" class="night" src="assets/floating/q_letter.png"/>
                 <img id="q-letter" class="day" src="assets/floating/q_letter_day.png"/>
                 <img id="line-buycrypt" class="invert" src="assets/floating/line_buycrypt.png"/>
@@ -801,8 +804,11 @@
                 <!-- <div class="guide-blur night"></div> -->
                 <!-- <div class="guide-blur-2 day"></div> -->
                 <!-- <div class="guide-blur day"></div> -->
-                <img id="blur-guide1"  src="assets/floating/blur_guide1.svg"/>
-                <img id="blur-guide2"  src="assets/floating/blur_guide2.svg"/>
+                <img class="blur-guide1 night"  src="assets/floating/blur_guide1.svg"/>
+                <img class="blur-guide2 night"  src="assets/floating/blur_guide2.svg"/>
+                
+                <img class="blur-guide1 day"  src="assets/floating/blur_guide1_day.svg"/>
+                <img class="blur-guide2 day"  src="assets/floating/blur_guide2_day.svg"/>
             </span>
         </div>
         <div class="container above-grain">
@@ -901,8 +907,11 @@
             <!-- <div class="start-blur night"></div> -->
             <!-- <div class="start-blur-2 day"></div> -->
             <!-- <div class="start-blur day"></div> -->
-            <img id="blur-start1" src="assets/floating/blur_start1.svg"/>
-            <img id="blur-start2" src="assets/floating/blur_start2.svg"/>
+            <img class="blur-start1 night" src="assets/floating/blur_start1.svg"/>
+            <img class="blur-start2 night" src="assets/floating/blur_start2.svg"/>
+
+            <img class="blur-start1 day" src="assets/floating/blur_start1_day.svg"/>
+            <img class="blur-start2 day" src="assets/floating/blur_start2_day.svg"/>
         </span>
         <div class="container above-grain">
             <span class="wrapper-float">
