update blur element

--- a/exchange.html
+++ b/exchange.html
@@ -227,11 +227,19 @@
 
 
     <div id="market">
-        <div class="container above-grain">
+        <div class="container">
             <span class="wrapper-float">
-                <div class="market-blur night"></div>
-                <div class="market-blur day"></div>
+                <!-- <div class="market-blur night"></div> -->
+                <!-- <div class="market-blur day"></div> -->
+                <img class="blur-market night" src="assets/floating/blur_market.svg"/>
+                <img class="blur-market day" src="assets/floating/blur_market_day.svg"/>
             </span>
+        </div>
+        <div class="container above-grain">
+            
+            <h1>
+                Market Trends
+            </h1>
             <div class="market-table">
                 <table>
                     <thead>
@@ -517,7 +525,14 @@
     </div>
 
 
+
     <div id="why">
+        <div class="container">
+            <span class="wrapper-float">
+                <img class="why-blur-1 night" src="assets/floating/blur_why1.svg"/>
+                <img class="why-blur-2 night" src="assets/floating/blur_why2.svg"/>
+            </span>
+        </div>
         <div class="container above-grain">
             <h1>
                 Why Bytedex?
