--- a/learn.html
+++ b/learn.html
@@ -350,10 +350,11 @@
 
     <div id="get-start">
         <span class="wrapper-float">
-            <div class="start-blur-2 night"></div>
-            <div class="start-blur night"></div>
-            <div class="start-blur-2 day"></div>
-            <div class="start-blur day"></div>
+            <img class="blur-start1 night" src="assets/floating/blur_start1.svg"/>
+            <img class="blur-start2 night" src="assets/floating/blur_start2.svg"/>
+
+            <img class="blur-start1 day" src="assets/floating/blur_start1_day.svg"/>
+            <img class="blur-start2 day" src="assets/floating/blur_start2_day.svg"/>
         </span>
         <div class="container above-grain">
             <h1>
