--- a/market.html
+++ b/market.html
@@ -197,11 +197,15 @@
 
 
     <div id="market">
-        <div class="container above-grain">
+        <div class="container">
             <span class="wrapper-float">
-                <div class="market-blur night"></div>
-                <div class="market-blur day"></div>
+                <!-- <div class="market-blur night"></div> -->
+                <!-- <div class="blur-market-1 night"></div> -->
+                <img class="blur-market night" src="assets/floating/blur_market.svg"/>
+                <img class="blur-market day" src="assets/floating/blur_market_day.svg"/>
             </span>
+        </div>
+        <div class="container above-grain">
             <h1>
                 Get cryptocurrency prices.
             </h1>
