update mobile view coninfo, exchange, geteio, startup, event page

--- a/coininfo.html
+++ b/coininfo.html
@@ -207,6 +207,9 @@
                 <img src="assets/Search.svg"/>
                 <input placeholder="Search" type="text"/>
             </div>
+            <label class="label-m">
+                Rank :
+            </label>
             <div class="section1-tab-btn">
                 <label>
                     Rank :
