--- a/startup.html
+++ b/startup.html
@@ -635,7 +635,20 @@
 
     <script type="text/javascript" src="nav.js"></script>
     <script>
-        
+        $(document).ready(function(){
+            if(detectMob()){
+                $('.section3-wrapper').slick({
+                    arrows: false,
+                    dots: false,
+                    infinite: true,
+                    slidesToShow: 1,
+                    slidesToScroll: 1,
+                    variableWidth: true,
+                    speed: 200,
+                    centerMode: true,
+                });
+            }
+        });
     </script>
 </body>
 </html>
